# NexTranslation

./: .gitignore  README.md  config.json  main.py  project_structure.txt  pyproject.toml  run_gui.py  test_gradio.py  xhj_work.md
docs/: FINAL_TARGET.md  LayeredAchitecture.md  ProjectOverview.md  Requirements.md  layer_architecture.md  requirements.txt
source/: PdfPhraser.py
src/: googletest.py  test_cache.py
src/nex_translation/: __init__.py
src/nex_translation/core/: __init__.py  converter.py  doclayout.py  google_translator.py  gui.py  pdf_processor.py  pdfinterpreter.py  translator.py
src/nex_translation/infrastructure/: cache.py  config.py
src/nex_translation/presentation/: cli.py  gui.py
src/nex_translation/utils/: exceptions.py  logger.py
src/pdf_translate/: gui.py
tests/: test_cache.py  test_config.py  test_translator.py
