[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "NexTranslation"
version = "1.0.0"
description = "An intelligent PDF translation tool that preserves layout"
authors = [
    {name = "NexTranslation Team", email = "2543327978@qq.com"}
]
readme = "README.md"
license = "GPL-3.0"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3.11",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Office/Business",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.11,<3.13"
dependencies = [
    "babeldoc==0.3.59",
    "fontTools==4.58.1",
    "numpy==2.2.6",
    "onnx==1.18.0",
    "onnxruntime==1.22.0",
    "opencv-python==4.11.0.86",
    "peewee==3.18.1",
    "pdfminer.six==20250416",
    "pymupdf==1.25.2",
    "requests==2.32.3",
    "rich==14.0.0",
    "tenacity==9.1.2",
    "tqdm==4.67.1",
    "gradio-pdf==0.0.22",
    "gradio==5.32.1",
    "pikepdf==9.8.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov",
    "pytest-mock",
    "pytest-asyncio",
    "black",
    "isort",
    "pyinstaller",
]

[project.urls]
"Homepage" = "https://github.com/Ao-chii/NexTranslation"
"Bug Tracker" = "https://github.com/Ao-chii/NexTranslation/issues"

[project.scripts]
nex-translate = "nex_translation.presentation.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["nex_translation*"]
namespaces = false